// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LQIP > blurhash LQIP is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
import { decode2url } from "@responsive-image/core/blurhash/decode";
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    bgImage: () => decode2url("M53dVIR8D8*Ft2MpoxylRoRlHYniyBRQbu", 5, 3),
    attribute: "bh:5:3:M53dVIR8D8*Ft2MpoxylRoRlHYniyBRQbu"
  }
};
console.log(image);
"
`;

exports[`LQIP > color LQIP is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    "class": "ri-dyn-0"
  }
};
console.log(image);
"
`;

exports[`LQIP > color LQIP with inline styles is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const inlineStyles = { "background-color": "#083838" };
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    inlineStyles
  }
};
console.log(image);
"
`;

exports[`LQIP > inline LQIP is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    "class": "ri-dyn-0"
  }
};
console.log(image);
"
`;

exports[`LQIP > inline LQIP with inline styles is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const inlineStyles = { "background-image": "url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB2aWV3Qm94PSIwIDAgNjQwIDQyNyI+CjxmaWx0ZXIgaWQ9ImIiIGNvbG9yLWludGVycG9sYXRpb24tZmlsdGVycz0ic1JHQiI+PGZlR2F1c3NpYW5CbHVyIHN0ZERldmlhdGlvbj0iLjUiPjwvZmVHYXVzc2lhbkJsdXI+PGZlQ29tcG9uZW50VHJhbnNmZXI+PGZlRnVuY0EgdHlwZT0iZGlzY3JldGUiIHRhYmxlVmFsdWVzPSIxIDEiPjwvZmVGdW5jQT48L2ZlQ29tcG9uZW50VHJhbnNmZXI+PC9maWx0ZXI+CjxpbWFnZSBmaWx0ZXI9InVybCgjYikiIHByZXNlcnZlQXNwZWN0UmF0aW89Im5vbmUiIGhlaWdodD0iMTAwJSIgd2lkdGg9IjEwMCUiIHhsaW5rOmhyZWY9ImRhdGE6aW1hZ2UvcG5nO2Jhc2U2NCxpVkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQWtBQUFBR0NBSUFBQUNlcFNPU0FBQUFDWEJJV1hNQUFBc1RBQUFMRXdFQW1wd1lBQUFBc0VsRVFWUjRuR05nTlRmaDFERGlrdFBoa05WbTB6UmlkWE5pczdaaDFURm0xamRpWVBWMzR2Rnc0ZGUxNWxVeTQ5SzM1QTN6NDNCMzVYRnc0QS96WkdEemMrZkxEaGVKQ3hXMjhCQXdkcFBLU1pDTkRWTlBDeFh5c21mZ01MUGw4M1NVakhkVktReTF5QTVOMlpoclhSWW1iR2ZGcHFMT3dLYW54YVdudzZ1cEx1dGxaSlpwWVpGaEkrWmt3V2xveks2cHpjQWlMODhxTDgydXA4Qm5yeVh2cVduWVlDQVpyTWR0WnNwbWFnSUFBaFFmUDJab1lSQUFBQUFBU1VWT1JLNUNZSUk9Ij48L2ltYWdlPgo8L3N2Zz4=)" };
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    inlineStyles
  }
};
console.log(image);
"
`;

exports[`LQIP > thumbhash LQIP is supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
import { decode2url } from "@responsive-image/core/thumbhash/decode";
const images = [{
  url: "/image-100w.jpg",
  width: 100,
  format: "jpeg"
}, {
  url: "/image-100w.webp",
  width: 100,
  format: "webp"
}, {
  url: "/image-200w.jpg",
  width: 200,
  format: "jpeg"
}, {
  url: "/image-200w.webp",
  width: 200,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: {
    bgImage: () => decode2url("jJcFFYI1fIWHe4dweXlYeUaAmWj3"),
    attribute: "th:jJcFFYI1fIWHe4dweXlYeUaAmWj3"
  }
};
console.log(image);
"
`;

exports[`custom loader options are supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/test-100.png",
  width: 100,
  format: "png"
}, {
  url: "/test-200.png",
  width: 200,
  format: "png"
}];
const image = {
  imageTypes: [
    "png"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "png")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;

exports[`custom query params are supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-100w.png",
  width: 100,
  format: "png"
}, {
  url: "/image-200w.png",
  width: 200,
  format: "png"
}];
const image = {
  imageTypes: [
    "png"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "png")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;

exports[`different aspect ratio 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-100w.png",
  width: 100,
  format: "png"
}, {
  url: "/image-200w.png",
  width: 200,
  format: "png"
}];
const image = {
  imageTypes: [
    "png"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 0.6666666666666666,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "png")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;

exports[`filter > it operates on included assets 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-640w.jpg",
  width: 640,
  format: "jpeg"
}, {
  url: "/image-640w.webp",
  width: 640,
  format: "webp"
}, {
  url: "/image-750w.jpg",
  width: 750,
  format: "jpeg"
}, {
  url: "/image-750w.webp",
  width: 750,
  format: "webp"
}, {
  url: "/image-828w.jpg",
  width: 828,
  format: "jpeg"
}, {
  url: "/image-828w.webp",
  width: 828,
  format: "webp"
}, {
  url: "/image-1080w.jpg",
  width: 1080,
  format: "jpeg"
}, {
  url: "/image-1080w.webp",
  width: 1080,
  format: "webp"
}, {
  url: "/image-1200w.jpg",
  width: 1200,
  format: "jpeg"
}, {
  url: "/image-1200w.webp",
  width: 1200,
  format: "webp"
}, {
  url: "/image-1920w.jpg",
  width: 1920,
  format: "jpeg"
}, {
  url: "/image-1920w.webp",
  width: 1920,
  format: "webp"
}, {
  url: "/image-2048w.jpg",
  width: 2048,
  format: "jpeg"
}, {
  url: "/image-2048w.webp",
  width: 2048,
  format: "webp"
}, {
  url: "/image-3840w.jpg",
  width: 3840,
  format: "jpeg"
}, {
  url: "/image-3840w.webp",
  width: 3840,
  format: "webp"
}];
const image = {
  imageTypes: [
    "jpeg",
    "webp"
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "jpeg")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;

exports[`imagetools params are supported 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-100w.png",
  width: 100,
  format: "png"
}, {
  url: "/image-200w.png",
  width: 200,
  format: "png"
}];
const image = {
  imageTypes: [
    "png"
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "png")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;

exports[`it produces expected output 1`] = `
"import { findMatchingImage } from "@responsive-image/core";
const images = [{
  url: "/image-640w.png",
  width: 640,
  format: "png"
}, {
  url: "/image-640w.webp",
  width: 640,
  format: "webp"
}, {
  url: "/image-750w.png",
  width: 750,
  format: "png"
}, {
  url: "/image-750w.webp",
  width: 750,
  format: "webp"
}, {
  url: "/image-828w.png",
  width: 828,
  format: "png"
}, {
  url: "/image-828w.webp",
  width: 828,
  format: "webp"
}, {
  url: "/image-1080w.png",
  width: 1080,
  format: "png"
}, {
  url: "/image-1080w.webp",
  width: 1080,
  format: "webp"
}, {
  url: "/image-1200w.png",
  width: 1200,
  format: "png"
}, {
  url: "/image-1200w.webp",
  width: 1200,
  format: "webp"
}, {
  url: "/image-1920w.png",
  width: 1920,
  format: "png"
}, {
  url: "/image-1920w.webp",
  width: 1920,
  format: "webp"
}, {
  url: "/image-2048w.png",
  width: 2048,
  format: "png"
}, {
  url: "/image-2048w.webp",
  width: 2048,
  format: "webp"
}, {
  url: "/image-3840w.png",
  width: 3840,
  format: "png"
}, {
  url: "/image-3840w.webp",
  width: 3840,
  format: "webp"
}];
const image = {
  imageTypes: [
    "png",
    "webp"
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => {
    var _a;
    return (_a = findMatchingImage(images, w, f ?? "png")) == null ? void 0 : _a.url;
  },
  lqip: void 0
};
console.log(image);
"
`;
